--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -13,7 +13,8 @@
 1.2 nav
 1.3 section
 1.4 a (anchor tags)
-1.5 h1(::before & ::after)
+1.5 h3(::before & ::after)
+1.6 img(logo)
 
 
 
@@ -57,7 +58,7 @@
 
 body,
 html {
-  font-size: 20px;
+  font-size: 16px;
   width: 100%;
   height: 100%;
   margin: 0px;
@@ -80,7 +81,7 @@ nav {
   margin-top: 0;
   background-color: rgb(0, 0, 0);
   position: fixed;
-  z-index: 2;
+  z-index: 1;
   list-style: none;
   line-height: 0;
   width: 100%;
@@ -100,12 +101,12 @@ nav ul li {
 
 nav a {
   color: #fff;
-  padding: 10px;
+  padding: 5px;
 }
 nav a:hover {
   color: black;
   background-color: #fff;
-  padding: 10px;
+  padding: 5px;
   border-radius: 5px;
 }
 
@@ -137,23 +138,32 @@ a:hover {
 
 /* 
 ------------------------------------
-1.5 h1(::before & ::after)
+1.5 h3(::before & ::after)
 ------------------------------------ 
 */
 
-h1 {
+h3 {
   line-height: 40px;
 }
-h1::before {
+h3::before {
   content: open-quote;
   font-size: 40px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
-h1::after {
+h3::after {
   content: close-quote;
   font-size: 40px;
   font-family: Arial, Helvetica, sans-serif;
+}
+
+/* 
+------------------------------------
+1.6 img(logo)
+------------------------------------ 
+*/
+img {
+  width: 300px;
 }
 
 /* 
@@ -207,7 +217,7 @@ h1::after {
   position: absolute;
   top: 45%;
   width: 100%;
-  font-size: 350%;
+  font-size: 200%;
   text-shadow: 0 0 1000px rgb(0, 0, 0);
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -256,6 +266,7 @@ h1::after {
   display: inline-block;
   font-weight: bolder;
   padding: 15px;
+  font-size: 11px;
 }
 
 /* 
@@ -268,6 +279,7 @@ h1::after {
   position: sticky;
   top: 40%;
   width: 100%;
+  height: auto;
 }
 
 /* 
@@ -289,7 +301,6 @@ h1::after {
 
 .grid {
   padding: 2em 1em 1em;
-  background: ;
   margin: 0;
   justify-content: space-around;
 }
@@ -344,7 +355,7 @@ h1::after {
 
 /* 
 ------------------------------------
-3.1.0 @media (max-width: 600px)
+3.1.0 @media (min-width: 600px)
 ------------------------------------ 
 */
 
@@ -358,10 +369,13 @@ h1::after {
 
   .mylinks {
     font-weight: bolder;
+    padding: 15px;
+    font-size: 20px;
   }
   .grid {
     display: flex;
   }
+
   .card {
     width: 48%;
     border-radius: 10px;
