--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -26,7 +26,7 @@
 2.2 .heading
 2.3 .two-col (Columns)
 2.4 .vibepost (section)
-2.5 .mylinks(navbar links)
+2.5 .navbar & navbar-links
 2.6 .logo (top-gif-logo "KITH LAMAR")
 2.7 vibe (vibepost font)
 2.8 .grid
@@ -39,7 +39,7 @@
 3.1.0 @media (max-width: 768px)
   3.1.1 .logo
   3.1.2 .heading
-  3.1.3 .mylinks
+  3.1.3 .navbar-links
 
 ------------------------------------
 
@@ -74,7 +74,7 @@ html {
 
 /* 
 ------------------------------------
-1.2 Nav
+1.2 Nav & .navbar
 ------------------------------------ 
 */
 nav {
@@ -184,16 +184,19 @@ img {
 .parallax1 {
   background: url("/img/img1.jpg");
   min-height: 100%;
+  background-color: #f7f7f7;
 }
 
 .parallax2 {
   background: url("/img/img2.jpg");
   min-height: 60%;
+  background-color: #f7f7f7;
 }
 
 .parallax3 {
   background: url("/img/img3.jpg");
   min-height: 100%;
+  background-color: #f7f7f7;
 }
 
 .parallax1,
@@ -258,15 +261,20 @@ img {
 
 /* 
 ------------------------------------
-2.5 .mylinks(navbar links)
+2.5 .navbar & navbar-links
 ------------------------------------ 
 */
 
-.mylinks {
+.navbar {
+  overflow: auto;
+  padding: 15px 0px;
+}
+
+.navbar-links {
   display: inline-block;
   font-weight: bolder;
-  padding: 10px;
-  font-size: 13px;
+  padding: 0 3px;
+  font-size: 16px;
 }
 
 /* 
@@ -367,7 +375,11 @@ img {
     font-size: 350%;
   }
 
-  .mylinks {
+  .navbar {
+    overflow: auto;
+    padding: 0px 0px;
+  }
+  .navbar-links {
     display: inline-block;
     font-weight: bolder;
     padding: 15px;
