--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -144,22 +144,10 @@ a:hover {
 */
 
 h1 {
-  line-height: 2em;
-  font-family: Quicksand;
+  line-height: 1.5em;
   font-weight: bolder;
-}
-h1::before {
-  content: open-quote;
   font-size: 40px;
-  font-family: Arial, Helvetica, sans-serif;
 }
-
-h1::after {
-  content: close-quote;
-  font-size: 40px;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
 /* 
 ------------------------------------
 1.6 img(logo)
@@ -206,9 +194,8 @@ img {
 .parallax2,
 .parallax3 {
   position: relative;
-  opacity: 5;
   background-position: center;
-  /* background-size: cover; */
+  background-size: cover;
   background-size: 1024px 1366px;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -226,7 +213,6 @@ img {
   width: 100%;
   font-size: 200%;
   text-shadow: 0 0 1000px rgb(0, 0, 0);
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 .heading a {
@@ -279,7 +265,6 @@ img {
   font-weight: bolder;
   padding: 15px 0;
   font-size: 18px;
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 /* 
@@ -302,7 +287,6 @@ img {
 */
 
 .vibe {
-  font-family: "Days One", sans-serif;
   font-weight: bolder;
 }
 
@@ -329,26 +313,25 @@ img {
 }
 
 .card {
-  background: rgba(0, 0, 0, lightgrey);
-  border-radius: 10px;
   margin: 0;
   padding: 0;
   height: auto;
   box-shadow: 0 4px 8px 0 black;
+  background: whitesmoke;
+  opacity: 0.7;
 }
 
 .card-image {
-  height: 69px;
+  height: 80px;
   width: 100%;
   object-fit: contain;
-  border-top-right-radius: 10px;
-  border-top-left-radius: 10px;
   background: white;
 }
 
 .card-text {
   font-weight: bolder;
-  padding: 0 1em;
+  padding: 1em 1em;
+  background: whitesmoke;
 }
 
 .card-link {
@@ -407,7 +390,6 @@ img {
 
   .card {
     width: 48%;
-    border-radius: 10px;
     height: auto;
   }
 
@@ -415,8 +397,6 @@ img {
     min-height: 5px;
     width: 100%;
     object-fit: contain;
-    border-top-right-radius: 10px;
-    border-top-left-radius: 10px;
     background: white;
   }
 
